Fix insufficient contrast error on active navigation links
Changed .active-link color from 'green' to #1e874f to meet WCAG2AA contrast requirements (4.5:1 ratio). This resolves the Pa11y accessibility error.

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -4,5 +4,5 @@ body {
   font-family: "Montserrat", "Open Sans", "Roboto", sans-serif;
 }
 .active-link {
-  color: green;
+  color: #1e874f;
 }
